prodMetadata/src/objects/Log__c.object
<CustomObject>
    <description>Integration and other custom logging records will be saved to this object.  These records should be purged periodically after they are no longer useful in order to free up storage space.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The errant campaign record, if applicable.</description>
        <inlineHelpText>The errant campaign record, if applicable.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The errant contact record, if applicable.</description>
        <inlineHelpText>The errant contact record, if applicable.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The errant donation record, if applicable.</description>
        <inlineHelpText>The errant donation record, if applicable.</inlineHelpText>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The log message</description>
        <inlineHelpText>The log message</inlineHelpText>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Name of the process being logged</description>
        <inlineHelpText>Name of the process being logged</inlineHelpText>
        <label>Process Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Name__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Past_3_Months</fullName>
        <columns>NAME</columns>
        <columns>Process_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Donation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>All - Past 3 Months</label>
    </listViews>
    <listViews>
        <fullName>All_Past_Month</fullName>
        <columns>NAME</columns>
        <columns>Process_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Donation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>All - Past Month</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>